<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_payment"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    tools:context="com.example.elena.musicapp2.PaymentActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/nav_bar_dimen"
        android:background="@color/colorPrimary">

        <LinearLayout
            android:id="@+id/home_navbar_id"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <ImageView
                style="@style/navbar_icon_style"
                android:layout_width="@dimen/icon_size"
                android:layout_height="wrap_content"
                android:src="@drawable/home_icon" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/songs_navbar_id"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <ImageView
                style="@style/navbar_icon_style"
                android:layout_width="@dimen/icon_size"
                android:layout_height="wrap_content"
                android:src="@drawable/song_icon" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/artists_navbar_id"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <ImageView
                style="@style/navbar_icon_style"
                android:layout_width="@dimen/icon_size"
                android:layout_height="wrap_content"
                android:src="@drawable/artist_icon" />

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:id="@+id/playlists_navbar_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <ImageView
                style="@style/navbar_icon_style"
                android:layout_width="@dimen/icon_size"
                android:layout_height="wrap_content"
                android:src="@drawable/playlists_icon" />

        </LinearLayout>

    </LinearLayout>

    <TextView
        style="@style/bundle_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/payment_activity_description"
        android:textColor="@android:color/white" />

    <LinearLayout
        style="@style/bundle_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="6dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/mosic_bundle_1"
            android:textColor="@android:color/white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:background="@color/purchaseColor"
                android:text="@string/buy_now"
                android:textColor="@android:color/white" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>
